[package]
name = "glome"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hmac = "0.12"
ed25519-compact = { version = "2", features = ["disable-signatures"] }

[dev-dependencies]
# test
hex-literal = "0.3"
# cli example
base64 = "0.21"
# getrandom = "0.2"
# Newer version is not compatible with Dalek, see
# https://stackoverflow.com/a/65562908/6144653.
# rand_core = { version = "0.5", features = ["getrandom"] }
clap = { version = "4", features = ["derive"] }

[lib]
name = "glome"
path = "src/lib.rs"
